--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
+# Node modules
+node_modules/
+
+# Environment variables
 .env
+
+# Log files
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+logs/**/*.log
+
+# IDE files
+.vscode/
+.idea/
+
+# Build files
+dist/
+build/
+
+# Other
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
