--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "multer": "^1.4.5"
+    "multer": "^1.4.4"   <--- QUESTA è quella giusta
   }
 }
-
